# mariadb-mysql-kbs

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .jshintignore  .jshintrc  .npmignore  .prettierignore  .snyk  .travis.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  Williamdes.html  classes.html  codecov.yml  composer.json  doc-index.html  doctum-search.json  doctum.js  index.html  interfaces.html  namespaces.html  package-lock.json  package.json  phpcs.xml  phpstan.neon  phpunit.xml  renderer.index  sami.js  search.html  traits.html
.dependabot/: config.yml
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: cron.yml  docs.yml  lint-and-analyse.yml  lock.yml  merge.yml  rust.yml  tests.yml
Williamdes/: MariaDBMySQLKBS.html
Williamdes/MariaDBMySQLKBS/: KBDocumentation.html  KBEntry.html  KBException.html  Search.html  SlimData.html
data/: mariadb-aria-server-status-variables.json  mariadb-aria-system-variables.json  mariadb-authentication-plugin-pam-variables.json  mariadb-aws-key-management-encryption-plugin-variables.json  mariadb-cassandra-status-variables.json  mariadb-cassandra-system-variables.json  mariadb-connect-system-variables.json  mariadb-cracklib-password-check-plugin-variables.json  mariadb-galera-cluster-status-variables.json  mariadb-galera-cluster-system-variables.json  mariadb-gtid-system-variables.json  mariadb-mariadb-audit-plugin-status-variables.json  mariadb-mariadb-audit-plugin-system-variables.json  mariadb-mroonga-status-variables.json  mariadb-mroonga-system-variables.json  mariadb-myisam-system-variables.json  mariadb-myrocks-system-variables.json  mariadb-mysqld-options-variables.json  mariadb-oqgraph-system-and-status-variables.json  mariadb-pbxt-system-variables.json  mariadb-performance-schema-status-variables.json  mariadb-performance-schema-system-variables.json  mariadb-query-response-time-plugin-variables.json  mariadb-replication-and-binary-log-server-system-variables.json  mariadb-replication-and-binary-log-status-variables.json  mariadb-s3-storage-engine-system-variables.json  mariadb-semisynchronous-replication-plugin-status-variables.json  mariadb-semisynchronous-replication-system-variables.json  mariadb-server-status-variables.json  mariadb-server-system-variables.json  mariadb-simple-password-check-plugin-variables.json  mariadb-sphinx-status-variables.json  mariadb-spider-server-status-variables.json  mariadb-spider-server-system-variables.json  mariadb-spider-system-variables.json  mariadb-ssltls-status-variables.json  mariadb-ssltls-system-variables.json  mariadb-storage-engine-independent-column-compression-variables.json  mariadb-thread-pool-system-and-status-variables.json  mariadb-tokudb-status-variables.json  (+22 more)
data/variables/: mariadb-aria-server-status-variables.json  mariadb-aria-system-variables.json  mariadb-authentication-plugin-gssapi-variables.json  mariadb-authentication-plugin-pam-variables.json  mariadb-aws-key-management-encryption-plugin-variables.json  mariadb-cassandra-status-variables.json  mariadb-cassandra-system-variables.json  mariadb-connect-system-variables.json  mariadb-cracklib-password-check-plugin-variables.json  mariadb-disks-plugin-variables.json  mariadb-feedback-plugin-variables.json  mariadb-file-key-management-encryption-plugin-variables.json  mariadb-galera-cluster-status-variables.json  mariadb-galera-cluster-system-variables.json  mariadb-gtid-system-variables.json  mariadb-handlersocket-configuration-options-variables.json  mariadb-mariadb-audit-plugin-options-and-system-variables.json  mariadb-mariadb-audit-plugin-status-variables.json  mariadb-mariadb-audit-plugin-system-variables.json  (+53 more)
schemas/: data-types.json  doc-url.json  doc-version.json  merged-raw.json  merged-slim.json  merged-ultraslim.json  url-types.json
scripts/: .gitignore  CHANGELOG.twig  apidoc-generate.sh  changelog.js  doctum-config.php  find-missing-data.sh  make-release.sh  release.php
src/: KBDocumentation.php  KBEntry.php  KBException.php  MariaDB.js  MySQL.js  Search.php  SlimData.php  cleaner.js  common.js  index.js  merge.php  spy.js  testbench.js  validate.php
src/rust/: lib.rs  (+12 more)
test/: .phpunit.result.cache  DataTest.php  JsonEncodeTest.php  RefProvider.php  SearchTest.php  SlimDataTest.php  cleaner.js  index.js  parser.js  template-docs.js  template-update.js  templates.js
tests/: DataTest.php  SearchTest.php  commonTest.js  phpunit.xml
(+47 files in other folders)
