[package]
name = "mariadb-mysql-kbs"
version = "1.3.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.64.0"  # MSRV
description = "An index of the MariaDB and MySQL Knowledge bases"
documentation = "https://github.com/williamdes/mariadb-mysql-kbs/blob/v1.3.0/README.md"
homepage = "https://github.com/williamdes/mariadb-mysql-kbs/tree/v1.3.0#readme"
repository = "https://github.com/williamdes/mariadb-mysql-kbs"
readme = "README.md"
keywords = ["mariadb", "mysql", "dataset", "kb", "knowledge-base", "mysql-knowledge-bases", "mariadb-knowledge-bases"]
categories = ["command-line-utilities"]
license = "MPL-2.0"
include = [
    "**/*.rs",
    "dist/*.json",
    "dist/*.md",
    "data/*.json",
    "Cargo.toml",
]

[badges]
github = { repository = "mariadb-mysql-kbs", branch = "master" }
codecov = { repository = "mariadb-mysql-kbs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "mariadb-mysql-kbs" }
is-it-maintained-open-issues = { repository = "mariadb-mysql-kbs" }
maintenance = { status = "passively-maintained" }

[lib]
name = "mariadb_mysql_kbs"
path = "src/rust/lib.rs"
test = true
doctest = true
bench = true
doc = true

[[bin]]
name = "mariadb-mysql-kbs"
path = "src/rust/mariadb-mysql-kbs.rs"

[dependencies]
clap = { version = "4.0.27", features = ["cargo"] }
futures = "0.3.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1.7.0"
