[package]
name = "mariadb-mysql-kbs"
version = "1.3.1-rc2"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.74"  # MSRV
description = "An index of the MariaDB and MySQL Knowledge bases"
homepage = "https://github.com/williamdes/mariadb-mysql-kbs/tree/v1.3.0#readme"
repository = "https://github.com/williamdes/mariadb-mysql-kbs"
readme = "README.md"
keywords = ["mariadb", "mysql", "dataset", "kb", "knowledge-base"]
categories = ["command-line-utilities"]
license = "MPL-2.0"
include = [
    "/src/rust/**/*.rs",
    "/dist/*.json",
    "/dist/*.md",
    "/data/*.json",
    "/Cargo.toml",
    "/LICENSE",
]

[badges]
github = { repository = "mariadb-mysql-kbs", branch = "main" }
codecov = { repository = "mariadb-mysql-kbs", branch = "main", service = "github" }
is-it-maintained-issue-resolution = { repository = "mariadb-mysql-kbs" }
is-it-maintained-open-issues = { repository = "mariadb-mysql-kbs" }
maintenance = { status = "passively-maintained" }

[lib]
name = "mariadb_mysql_kbs"
path = "src/rust/lib.rs"
test = true
doctest = true
bench = true
doc = true

[[bin]]
name = "mariadb-mysql-kbs"
path = "src/rust/mariadb-mysql-kbs.rs"

[dependencies]
clap = { version = "4.0.27", features = ["cargo", "derive"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
regex = "1.7.0"
ureq = { version = "3.0.6" }
select = "0.6.0"
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
serde_repr = "0.1.9"

[dev-dependencies]
pretty_assertions = "1.3.0"
